# vidwiz

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  wrangler.jsonc  wsgi.py
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  wsgi.py
backend/infra/systemctl/: vidwiz-metadata-helper.service  vidwiz-transcript-helper.service
backend/src/: config.py  database.py  exceptions.py  logging.py  main.py  metrics.py  models.py
backend/src/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/conversations/: config.py  dependencies.py  models.py  prompts.py  router.py  schemas.py  service.py
backend/src/credits/: __init__.py  models.py  service.py
backend/src/internal/: __init__.py  constants.py  dependencies.py  models.py  router.py  scheduling.py  schemas.py  service.py
backend/src/middleware/: request_logging.py
backend/src/notes/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/payments/: models.py  products.py  router.py  schemas.py  service.py
backend/src/shared/: ratelimit.py
backend/src/tests/: conftest.py  test_auth_dependencies.py  test_auth_routes.py  test_auth_schemas.py  test_auth_service.py  test_config_settings.py  test_conversations_dependencies.py  test_conversations_routes.py  test_conversations_schemas.py  test_conversations_service.py  test_database.py  test_exceptions.py  test_internal_dependencies.py  test_internal_routes.py  test_internal_schemas.py  test_internal_service.py  test_logging_middleware.py  test_notes_dependencies.py  test_notes_routes.py  test_notes_schemas.py  test_notes_service.py  test_payments_routes.py  test_rate_limits.py  test_videos_dependencies.py  test_videos_routes.py  test_videos_schemas.py  test_videos_service.py  test_videos_utils.py  test_worker_helper_scripts.py
backend/src/videos/: constants.py  dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
backend/vidwiz/: app.py
backend/vidwiz-bak/routes/: core_routes.py  tasks_routes.py  wiz_routes.py
backend/vidwiz-bak/services/: tasks_service.py  user_service.py  video_service.py
backend/vidwiz-bak/shared/: config.py  logging.py  tasks.py
backend/vidwiz-bak/tests/: test_app.py  test_core_routes.py  test_edge_cases.py  test_lambdas.py  test_models.py  test_notes_routes.py  test_shared_tasks.py  test_user_routes.py
backend/vidwiz/lambdas/: gen_ai_note.py  gen_ai_summary.py  push_notes_to_queue.py
backend/vidwiz/routes/: core_routes.py  frontend_routes.py  notes_routes.py  tasks_routes.py  user_routes.py  video_routes.py  wiz_routes.py
backend/vidwiz/scripts/: metadata-helper.py  migrate_auth.py  migrate_name.py  populate_metadata.py  sync-metadata.py  transcript-helper.py
backend/vidwiz/services/: core_service.py  notes_service.py  vidwiz-metadata-helper.service  vidwiz-transcript-helper.service  wiz_service.py
backend/vidwiz/shared/: config.py  errors.py  models.py  (+3 more)
(+158 files in other folders)
