[project]
name = "vidwiz"
version = "0.1.0"
description = ""
authors = [
    {name = "adhirajpandey",email = "pandey.adhiraj02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "boto3 (>=1.39.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vidwiz = "vidwiz.app:main"